force-app/main/default/objects/vlocity_ins__DRWorker__c/fields/vlocity_ins__DRObjectName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DRObjectName__c</fullName>
    <description>Name of Data Mapper Object being processed currently.</description>
    <label>Data Mapper Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>