force-app/main/default/objects/vlocity_ins__DRWorker__c/fields/vlocity_ins__StartedAt__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__StartedAt__c</fullName>
    <description>Time when Data Mapper Batch Job began.</description>
    <label>Started At</label>
    <type>DateTime</type>
</CustomField>